ejercicio sin funciones

--- a/Sign-up.html
+++ b/Sign-up.html
@@ -13,7 +13,7 @@
 		<div class="container-fluid">
 			<div class="row header">
 				<div class="col-xs-12">
-					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true""></span>
+					<a href="index.html"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true""></span></a>
 					<h4>Sign up</h4>
 					<p>Join now for free credit</p>
 					<hr>
@@ -45,7 +45,7 @@
 	<section>
 			<div class="row">
 				<div class="col-xs-12">
-					<button type="button" class="btn btn-lg btn-block btn-next">NEXT</button>
+					<a href="signupsiguiente.html"><button type="button" class="btn btn-lg btn-block btn-next">NEXT</button></a>
 				</div>
 			</div>
 	</section>
