--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<section>
 		<div class="container">
 			<div class="row">
-				<img src="img/lyft_coupons.png" class="img-responsive logo">
+				<img src="img/lyatlogo.svg" class="img-responsive logo">
 			</div>
 		</div>
 	</section>
