--- a/signupsiguiente.html
+++ b/signupsiguiente.html
@@ -28,13 +28,13 @@
 				<div class="col-xs-12">
 					<div class="input-group username">
 						<span class="input-group-addon glyphicon glyphicon-user"></span>
-						<input type="email" class="form-control" placeholder="First Name" aria-describedby="basic-addon1">
+						<input type="email" class="form-control" id="username" placeholder="First Name" aria-describedby="basic-addon1">
 					</div>
 				</div>
 			</div>
 			<div class="input-group email">
 				<span class="input-group-addon glyphicon glyphicon-envelope"></span>
-				<input type="text" class="form-control" placeholder="Email" aria-describedby="basic-addon1">
+				<input type="text" class="form-control useremail" placeholder="Email" aria-describedby="basic-addon1">
 			</div>
 		</div>
 	</section>
@@ -43,8 +43,8 @@
 			<div class="row rowcheckbox">
 				<div class="col-xs-12">
 					<div class="checkbox">
-  <label><input type="checkbox" value="">I agree to lyft's <a href="#">Terms of service</a></label>
-</div>
+						<label><input type="checkbox" value=""> I agree to lyft's  <a href="#">Terms of service</a></label>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -56,7 +56,6 @@
 			</div>
 		</div>
 	</section>
-
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
