ejercicio sin validaciones

--- a/signupsiguiente.html
+++ b/signupsiguiente.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="fonts/">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
 </head>
 <body>
 	<header>
@@ -34,7 +35,7 @@
 			</div>
 			<div class="input-group email">
 				<span class="input-group-addon glyphicon glyphicon-envelope"></span>
-				<input type="text" class="form-control useremail" placeholder="Email" aria-describedby="basic-addon1">
+				<input id="input-email" type="text" class="form-control" placeholder="Email" aria-describedby="basic-addon1">
 			</div>
 		</div>
 	</section>
@@ -52,12 +53,12 @@
 	<section>
 		<div class="row">
 			<div class="col-xs-12">
-				<a href="signupsiguiente.html"><button type="button" class="btn btn-lg btn-block btn-next">NEXT</button></a>
+				<a href="navigation.html"><button type="button" class="btn btn-lg btn-block btn-next">NEXT</button></a>
 			</div>
 		</div>
 	</section>
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/validacion.js"></script>
 </body>
 </html>
