--- a/navigation.html
+++ b/navigation.html
@@ -65,6 +65,6 @@
 	async defer>
 </script>
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/navigation.js"></script>
 </body>
 </html>
